# ehs

./: Dockerfile  Makefile  README.md  pyproject.toml
ehs/: __init__.py  config.py
ehs.egg-info/: PKG-INFO  SOURCES.txt
ehs/api/: __init__.py  history.py  login.py  medicine.py  patient.py  streak.py  utils.py
sql/: data.sql  schema.sql
var/: ehs.sqlite3
