[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehs"
version = "1.0.0"
dependencies = [
    "Flask",
    "requests",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["ehs"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]